--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   "dependencies": {
     "element-ui": "^2.4.5",
     "vue": "^2.5.21",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
     "@vue/cli-plugin-eslint": "^3.2.0",
-    "@vue/cli-service": "^3.2.0",
+    "@vue/cli-service": "^3.2.3",
     "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-element": "^1.0.0",
+    "vue-cli-plugin-fontawesome": "^0.1.0",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
