--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-element": "^1.0.0",
+    "vue-cli-plugin-iview": "^1.0.6",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
