--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "element-ui": "^2.4.5",
     "vue": "^2.5.21",
+    "vue-axios": "^2.1.4",
     "vue-cookies": "^1.5.13",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
